My progress as of scrum